vlib/v/checker/tests/void_fn_multiple_ret_err.out
vlib/v/checker/tests/void_fn_multiple_ret_err.vv:2:9: error: functions with Result-only return types can only return an error
    1 | fn foo_result_1() ! {
    2 |     return none, 100
      |            ~~~~
    3 | }
    4 |
vlib/v/checker/tests/void_fn_multiple_ret_err.vv:6:2: error: Option and Result types have been split, use `?` to return none
    4 | 
    5 | fn foo_result_2() ! {
    6 |     return none
      |     ~~~~~~~~~~~
    7 | }
    8 |
vlib/v/checker/tests/void_fn_multiple_ret_err.vv:6:9: error: cannot use `none` as Result type in return argument
    4 | 
    5 | fn foo_result_2() ! {
    6 |     return none
      |            ~~~~
    7 | }
    8 |
vlib/v/checker/tests/void_fn_multiple_ret_err.vv:14:9: error: cannot use `int literal` as Result type in return argument
   12 | 
   13 | fn foo_result_4() ! {
   14 |     return 1
      |            ^
   15 | }
   16 |
vlib/v/checker/tests/void_fn_multiple_ret_err.vv:21:9: error: cannot use `string` as type `!int` in return argument
   19 | 
   20 | fn foo_result_6() !int {
   21 |     return ''
      |            ~~
   22 | }
   23 |
vlib/v/checker/tests/void_fn_multiple_ret_err.vv:25:9: error: can only return `none` from an Option-only return function
   23 | 
   24 | fn foo_option_1() ? {
   25 |     return none, 100
      |            ~~~~
   26 | }
   27 |
vlib/v/checker/tests/void_fn_multiple_ret_err.vv:36:9: error: cannot use `int literal` as Option type in return argument
   34 | 
   35 | fn foo_option_3() ? {
   36 |     return 1
      |            ^
   37 | }
