vlib/v/checker/tests/void_fn_multiple_ret_err.vv
fn foo_result_1() ! {
	return none, 100
}

fn foo_result_2() ! {
	return none
}

fn foo_result_3() ! {
	return error('')
}

fn foo_result_4() ! {
	return 1
}

fn foo_result_5() ! {
}

fn foo_result_6() !int {
	return ''
}

fn foo_option_1() ? {
	return none, 100
}

fn foo_option_2() ? {
	return none
}

fn foo_option_3() ? {
}

fn foo_option_3() ? {
	return 1
}
